fixed some of the styling overflow issues.

--- a/src/greeting-system/src/hoc-styles/StaffSelect.css
+++ b/src/greeting-system/src/hoc-styles/StaffSelect.css
@@ -1,21 +1,28 @@
 .staff-select-grid {
     display: grid;
     height: 100%;    
-    grid-template-rows: 1fr 5fr;
-    row-gap: 3rem;
+    grid-template-rows: 20% 80%;
+    row-gap: 0.5rem;
     align-items: center;
     justify-items: center;
 }
 
 .staff-select-grid-item {
     height: 100%;
+    min-height: 0;
     width: 60%;
+    overflow-y: auto;
 }
 
 .header-card {
-    padding: 1rem;
+    padding: 1%;
     text-align: center; 
     width: 80%;   
+}
+
+::-webkit-scrollbar {
+    visibility: collapse;
+    width: 0px;
 }
 
 .searchIcon {
@@ -24,22 +31,24 @@
 
 .search-field-wrapper {
     display: flex;
-    margin-left: 1rem;
-    margin-right: 1rem;
+
 }
+
 
 
 .results-grid {
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-template-columns: 1fr 1fr 1fr;
-    column-gap: 1rem;
-    row-gap: 1rem;
-    height: 100%;
-    width: 80%;    
-    padding: 1rem;
-    overflow-y: auto;
+    grid-template-columns: 1fr 1fr 1fr;  
+    grid-auto-rows: 200px;
+    height: 95%;
+    width: 80%;        
     text-align: center;
+    padding: 1%;    
+}
+
+.staff-result-wrapper {    
+    margin: 0.5rem;
+    overflow-y: hidden;
 }
 
 @media (min-width: 550px) and (max-width: 1024px) {
